--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <span><strong>END {...}</strong> Indica que el bloque se ejecutará al final del archivo, es decir lo que está
           dentro de paréntesis.</span>
         <br><br>
-        <span><strong>print NR</strong> Imprime en número totoal de líneas.</span>
+        <span><strong>print NR</strong> Imprime en número total de líneas.</span>
       </p>
       <img src="images/captura_12.png" alt="Captura de una terminal de Linux con líneas de comandos.">
       <br>
